Completed multi record recoginzation.

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
-    <!-- <link rel="stylesheet" href="../build/main/bundle.css"> -->
+    <link rel="stylesheet" href="../build/main/bundle.css">
     <script src="./jquery-3.1.1.min.js" charset="utf-8"></script>
-    <!-- <script src="../build/vendor.js" charset="utf-8"></script> -->
-    <!-- <script src="../build/main/bundle.js" charset="utf-8"></script> -->
+    <script src="../build/vendor.js" charset="utf-8"></script>
+    <script src="../build/main/bundle.js" charset="utf-8"></script>
 </head>
 <body>
     <div class="normal-web">
